# diskovery

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
docs/: AI-PRIVACY.md  ARCHITECTURE.md  ROADMAP.md
src/: main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: fileops.rs  lib.rs  main.rs  settings.rs
src-tauri/src/advisor/: mod.rs  rules.rs
src-tauri/src/ai/: digest.rs  gemini.rs  mod.rs
src-tauri/src/dedup/: mod.rs
src-tauri/src/ipc/: mod.rs
src-tauri/src/scanner/: mod.rs  volumes.rs
src-tauri/src/treemap/: mod.rs
src/app/: App.tsx  NavRail.tsx  TitleBar.tsx  dedupStore.ts  scanStore.ts  store.ts
src/app/views/: AdvisorView.tsx  AiView.tsx  ComingSoon.tsx  DashboardView.tsx  DuplicatesView.tsx  SettingsView.tsx  TreemapView.tsx  index.tsx
src/shared/: Icon.tsx  format.ts  ipc.ts
src/styles/: global.css
