[package]
name = "diskovery"
version = "0.1.0"
description = "Modern disk-space intelligence for Windows"
authors = ["nkVas1"]
license = "MIT"
repository = "https://github.com/nkVas1/diskovery"
edition = "2021"

[lib]
name = "diskovery_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
parking_lot = "0.12"
rayon = "1.10"
crossbeam-channel = "0.5"
sysinfo = "0.33"
trash = "5"
blake3 = { version = "1", features = ["rayon", "mmap"] }
memmap2 = "0.9"
redb = "2"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

[profile.release]
lto = true
codegen-units = 1
strip = true

# Fast-enough dev builds for a smooth `tauri dev` loop
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 2
